--- a/wtf-ml.html
+++ b/wtf-ml.html
@@ -153,7 +153,7 @@ div.csl-indent {
 <p>In this application, there is one sample from each of the 60 bioreactors. Raman spectroscopy has been applied to each sample, and the drug product concentration has been measured. <a href="#fig-raman-spectra" class="quarto-xref">Figure&nbsp;1</a> displays the original Raman spectra. From this figure, we can see that there is an initial downward trend towards the middle of the wavenumbers, then an upward trend towards the higher wavenumbers. The intensities are not randomly scattered. Instead, there is a relationship across wavenumbers with intensity. This relationship indicates that wavenumber intensities are correlated with each other. In fact, the correlation between the majority of adjacent wavenumbers is greater than 0.99.</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div id="fig-raman-spectra" class="quarto-figure quarto-figure-center anchored" width="80%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-raman-spectra" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="80%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-raman-spectra-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/fig-raman-spectra-1.svg" class="img-fluid quarto-figure-center figure-img" style="width:80.0%" data-fig-pos="t!">
 </div>
@@ -166,7 +166,7 @@ Figure&nbsp;1: Raman spectra profiles for each of the 60 samples.
 <p>To illustrate this more clearly, let’s examine the relationship among wavenumber measurements for the first sample. For the first sample, the first 3000 lags are created. To create a lag, the data is shifted by a specified number of rows to create a new variable. For example, to create the first lag, the wavenumber measurements are shifted over by one wavenumber. To create the second lag, the measurements are shifted by two wavenumberes, and so on. <a href="#fig-lagged-spectra" class="quarto-xref">Figure&nbsp;2</a> illustrates the correlation between each subsequent lag for the first 1000 lags. Clearly, close wavenumbers have a high correlation, whereas far wavenumbers have a low correlation. As we will see, understanding this characteristic will be very important when deciding how to pre-process the data prior to modeling and which models to train.</p>
 <div class="cell" data-layout-align="center" data-hash="_cache/fig-lagged-spectra_57f627c3607bc6c5576c2e73ea98aefe">
 <div class="cell-output-display">
-<div id="fig-lagged-spectra" class="quarto-figure quarto-figure-center anchored" width="60%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-lagged-spectra" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="60%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-lagged-spectra-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/fig-lagged-spectra-1.svg" class="img-fluid quarto-figure-center figure-img" style="width:60.0%" data-fig-pos="t!">
 </div>
@@ -180,7 +180,7 @@ Figure&nbsp;2: The correlation between the original intensities and lagged inten
 <p>In addition to understanding the predictors, we should also understand the characteristics of the response. Examining the response distribution can help determine if a transformation may be necessary or if there are samples that are unusual with respect to the majority of the data. <a href="#fig-concentration" class="quarto-xref">Figure&nbsp;3</a> presents the histogram of drug product concentration across the samples. For this data, the distribution is approximately symmetric and has a range of 85 to 115. Based on this figure, a transformation does not appear necessary, and there are no unusual samples.</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div id="fig-concentration" class="quarto-figure quarto-figure-center anchored" width="60%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-concentration" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="60%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-concentration-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/fig-concentration-1.svg" class="img-fluid quarto-figure-center figure-img" style="width:60.0%" data-fig-pos="t!">
 </div>
@@ -209,7 +209,7 @@ Figure&nbsp;3: The distribution of drug product concentration across samples.
 <p>Instead of a single training/test split, we need a process that can be used to evaluate many tuning parameter values for each of many different models. <a href="#fig-resampling" class="quarto-xref">Figure&nbsp;4</a> illustrates a two-layered process that incorporates the use of resampling. The first layer splits the entire data set into a training and test set. In general, anywhere between 50% to 80% of the data is randomly selected for the training data, while the remaining data is placed in the test set. A random split may be adequate. However, we may desire that the training set and testing split data have similar characteristics. For example, it may be advantageous for the training and test sets to have a similar distribution of the response. If the response distribution is skewed, then it would be important that the training and test sets reflect the entirety of the distribution. Likewise, if there are characteristics or covariates in the data that should be proportionally represented, then the data should be split into the training and testing set using a stratified random approach.</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div id="fig-resampling" class="quarto-figure quarto-figure-center anchored" width="80%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-resampling" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="80%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-resampling-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="premade/resampling.svg" class="img-fluid quarto-figure-center figure-img" style="width:80.0%" data-fig-pos="t!">
 </div>
@@ -222,7 +222,7 @@ Figure&nbsp;4: Illustration of a general data usage scheme that incorporates res
 <p>The training data is split using resampling in the second layer of <a href="#fig-resampling" class="quarto-xref">Figure&nbsp;4</a>. Cross-validation could be used in this layer, where the data is split into <span class="math inline">\(V\)</span> folds. For example, if 10-fold cross-validation were used in this layer, then the training data would be partitioned into 10 folds. The analysis set for the first resample would contain 9 folds of the data, while the assessment set would contain 1 fold of the data. A model would be constructed using the 9 folds and would evaluated using the hold-out fold. To create the analysis set for the second resample, a different combination of 9-folds would be used to construct the model. The model would then be evaluated on the fold that was not used in the modeling. For illustration, <a href="#fig-three-fold" class="quarto-xref">Figure&nbsp;5</a> provides an illustration of 3-fold cross-validation (although <span class="math inline">\(V = 10\)</span> is a much better choice).</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div id="fig-three-fold" class="quarto-figure quarto-figure-center anchored" width="60%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-three-fold" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="60%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-three-fold-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="premade/three-CV.svg" class="img-fluid quarto-figure-center figure-img" style="width:60.0%" data-fig-pos="t!">
 </div>
@@ -278,7 +278,7 @@ Figure&nbsp;5: A diagram of how 3-fold cross-validation can be used with 30 data
 <p>A polynomial smoother <span class="citation" data-cites="cleveland1988locally luers1971polynomial">(<a href="#ref-cleveland1988locally" role="doc-biblioref">Cleveland and Devlin 1988</a>; <a href="#ref-luers1971polynomial" role="doc-biblioref">Luers and Wenning 1971</a>)</span> is one tool that can be used to approximate the background. <a href="#fig-profile-baseline-poly" class="quarto-xref">Figure&nbsp;6</a> illustrates the original spectra for the first sample, the background as modeled by a polynomial smoother, and the corrected spectra. Notice that the corrected spectra are now more anchored with intensities at or near zero.</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div id="fig-profile-baseline-poly" class="quarto-figure quarto-figure-center anchored" width="80%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-profile-baseline-poly" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="80%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-profile-baseline-poly-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/fig-profile-baseline-poly-1.svg" class="img-fluid quarto-figure-center figure-img" style="width:80.0%" data-fig-pos="t!">
 </div>
@@ -292,7 +292,7 @@ Figure&nbsp;6: The distribution standard deviation of intensity measurements acr
 <p>The Savitzky-Golay procedure <span class="citation" data-cites="savitzky1964smoothing stevens2022">(<a href="#ref-savitzky1964smoothing" role="doc-biblioref">Savitzky and Golay 1964</a>; <a href="#ref-stevens2022" role="doc-biblioref">Stevens and Ramirez-Lopez 2022</a>)</span> is designed to remove spurious signals by simultaneously smoothing the data while also centering the overall signal and dampening variability. The procedure is governed by the order of differentiation, degree of polynomial, and window size. <a href="#fig-sg-filtering" class="quarto-xref">Figure&nbsp;7</a> compares the impact of this procedure for differentiation order of 1 or 2, polynomial order of 2, and a small (15) or large (49) window size.</p>
 <div class="cell" data-layout-align="center" data-hash="_cache/fig-sg-filtering_ad0075c131fb31533d323335b6640607">
 <div class="cell-output-display">
-<div id="fig-sg-filtering" class="quarto-figure quarto-figure-center anchored" width="60%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-sg-filtering" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="60%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-sg-filtering-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/fig-sg-filtering-1.svg" class="img-fluid quarto-figure-center figure-img" style="width:60.0%" data-fig-pos="t!">
 </div>
@@ -307,7 +307,7 @@ Figure&nbsp;7: The impact of the Savitzky-Golay procedure on the Raman spectra.
 <p>For these data, principal component analysis can be conducted on the training set predictors (after centering and scaling the predictors). This can help us understand if there are any unwanted systematic effects in the data (such as differences in reagents, instruments, etc.). <a href="#fig-pca-plot" class="quarto-xref">Figure&nbsp;8</a> shows the results using two components. These components accounted for between 65%-95% of the predictor information, with the exception of the (2, 2, 15) set, which only captured about 45%. With the exception of a single sample, there are no obvious patterns in the results to give us pause (such as clustering). That odd sample, number 34, is the same data point in <a href="#fig-raman-spectra" class="quarto-xref">Figure&nbsp;1</a> with relatively low intensity compared to the other spectra. It is unclear how this would affect the results (if at all), so it was retained in the data set. Later analyses will examine whether this sample is associated with larger residuals.</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div id="fig-pca-plot" class="quarto-figure quarto-figure-center anchored" width="80%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-pca-plot" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="80%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-pca-plot-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/fig-pca-plot-1.svg" class="img-fluid quarto-figure-center figure-img" style="width:80.0%" data-fig-pos="t!">
 </div>
@@ -382,7 +382,7 @@ Figure&nbsp;8: Two-component PCA plots for each pre-processing method. One parti
 <p>Finally, grid search had been considered inefficient because of the assumption that regular (i.e., full factorial) grids were used. If we evaluated <span class="math inline">\(L\)</span> values of each of <span class="math inline">\(M\)</span> tuning parameters, the full factorial set of <span class="math inline">\(L^M\)</span> combinations can become very large. This is no surprise to most CMC statisticians and engineers. However, as previously mentioned, the better design choices for grid search are space-filling designs. It is difficult to quantify the positive impact these designs have had on optimizing models in terms of efficiency and efficacy. <a href="#fig-sfd" class="quarto-xref">Figure&nbsp;9</a> shows an example Audze-Eglais design from <span class="citation" data-cites="husslage2011space">Husslage et al. (<a href="#ref-husslage2011space" role="doc-biblioref">2011</a>)</span> for the two Cubist tuning parameters and 25 candidate points.</p>
 <div class="cell" data-layout-align="center" data-hash="_cache/fig-sfd_578dcec9fdf623c7e119052d149bafd8">
 <div class="cell-output-display">
-<div id="fig-sfd" class="quarto-figure quarto-figure-center anchored" width="45%" data-fig-align="center" data-fig-pos="t!">
+<div id="fig-sfd" class="quarto-figure quarto-figure-center anchored" data-fig-align="center" width="45%" data-fig-pos="t!">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-sfd-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/fig-sfd-1.svg" class="img-fluid quarto-figure-center figure-img" style="width:45.0%" data-fig-pos="t!">
 </div>
@@ -424,6 +424,7 @@ Figure&nbsp;11: Progress of Bayesian optimization for the SVM parameters. Iterat
 <p><a href="#fig-svm-search" class="quarto-xref">Figure&nbsp;11</a></p>
 <p>The next step in the process is to select which predictor set, model, and tuning parameter settings are optimal for the data.</p>
 <p><a href="#fig-all-optimal-models" class="quarto-xref">Figure&nbsp;12</a> displays the cross-validated RMSE values corresponding to each model’s optimal tuning parameter settings. There are several important findings that this figure reveals. First, the SVM and RF models have improved predictive performance when the SG pre-processing is applied. On the other hand, the PLS and Cubist models are not substantially improved with this pre-processing. In fact, the performance can be made worse if second-order differentiation is applied.</p>
+<p>The samples with the largest residuals were 34 and 7</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-all-optimal-models" class="quarto-figure quarto-figure-center anchored" data-fig-pos="t!" width="75%">
